tests/neg/i11637.check
-- [E057] Type Mismatch Error: tests/neg/i11637.scala:13:33 ------------------------------------------------------------
13 |  var h = new HKT3_1[FunctorImpl]();  // error // error
   |                                 ^
   |       Type argument test2.FunctorImpl does not conform to upper bound [Generic2[T <: String] <: Set[T]] =>> Any
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | I tried to show that
   |   test2.FunctorImpl
   | conforms to
   |   [Generic2[T <: String] <: Set[T]] =>> Any
   | but none of the attempts shown below succeeded:
   |
   |   ==> test2.FunctorImpl  <:  [Generic2[T <: String] <: Set[T]] =>> Any
   |     ==> type bounds [[T <: String] <: Set[T]]  <:  type bounds [[T] <: Iterable[T]]
   |       ==> [T <: String] =>> Set[T]  <:  Iterable
   |         ==> type bounds []  <:  type bounds [ <: String]
   |           ==> Any  <:  String  = false
   |
   | The tests were made under the empty constraint
    --------------------------------------------------------------------------------------------------------------------
-- [E057] Type Mismatch Error: tests/neg/i11637.scala:13:21 ------------------------------------------------------------
13 |  var h = new HKT3_1[FunctorImpl]();  // error // error
   |                     ^
   |       Type argument test2.FunctorImpl does not conform to upper bound [Generic2[T <: String] <: Set[T]] =>> Any
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | I tried to show that
   |   test2.FunctorImpl
   | conforms to
   |   [Generic2[T <: String] <: Set[T]] =>> Any
   | but none of the attempts shown below succeeded:
   |
   |   ==> test2.FunctorImpl  <:  [Generic2[T <: String] <: Set[T]] =>> Any
   |     ==> type bounds [[T <: String] <: Set[T]]  <:  type bounds [[T] <: Iterable[T]]
   |       ==> [T <: String] =>> Set[T]  <:  Iterable
   |         ==> type bounds []  <:  type bounds [ <: String]
   |           ==> Any  <:  String  = false
   |
   | The tests were made under the empty constraint
    --------------------------------------------------------------------------------------------------------------------
